# piper_gripper

./: .gitignore  CMakeLists.txt  README.md
examples/: test_gripper_cpp.cpp  test_gripper_effort_cpp.cpp
include/piper/gripper/: gripper_client.hpp
src/: gripper_client.cpp
src/internal/: can_socket.cpp  can_socket.hpp  fps_counter.cpp  fps_counter.hpp  protocol_codec.cpp  protocol_codec.hpp
tests/integration/: test_vcan_gripper_loop.cpp
tests/unit/: test_protocol_codec.cpp
tools/: setup_vcan.sh
